# libsoftfloat_math

./: CMakeLists.txt  LICENSE.BSD3  SharemindLibSoftfloatMathConfig.cmake.in  SharemindLibSoftfloatMathConfigVersion.cmake.in
src/: sf_abs.c  sf_abs.h  sf_ceil.c  sf_ceil.h  sf_erf.c  sf_erf.h  sf_exp.c  sf_exp.h  sf_floor.c  sf_floor.h  sf_log.c  sf_log.h  sf_scalbn.h  sf_sin.c  sf_sin.h
src/internal/: __sf_cos.c  __sf_cos.h  __sf_rem_pio2.c  __sf_rem_pio2.h  __sf_rem_pio2_large.c  __sf_rem_pio2_large.h  __sf_sin.c  __sf_sin.h  macros.h
src/sharemind/: CMakeLists.txt  SharemindLibsoftfloatMathConfig.cmake.in  SharemindLibsoftfloatMathConfigVersion.cmake.in
